Fix modal scroll on safari again

--- a/utils/modal/modal.css
+++ b/utils/modal/modal.css
@@ -8,15 +8,10 @@
 iframe {
     height: 100%;
     width: 100%;
-    overflow: hidden;
     /*Estilos para permitir scroll en safari */
-    position: absolute;
-    top: 80px;
-    left: 0px;
-    bottom: 0px;
-    right: 0px; 
+    overflow: auto !important;
+    -webkit-overflow-scrolling: touch !important;
     border:none;
-    z-index:999999;
 }
 
 .popup{
